# baby_tracker_with_pip

./: .gitignore  Dockerfile  Procfile  pyproject.toml  requirements.txt
data/: Ayla.xls  Ela.xls
reporting/: Amelia_feeding_schedule.xlsx
src/: app.py  main.py  plotly-cloud.toml
src/app/: __init__.py  app_factory.py  plotly-cloud.toml
src/app/components/: home.py  individual_feeds.py  night_vs_day_feeds.py
src/app_input/: app_factory.py  dashboard_logic.py
src/app_input/components/: __init__.py  home.py  individual_feeds.py  night_vs_day_feeds.py
src/models/: children.py
src/pipeline/: data_pipeline.py
tests/: test_base_model.py
